--- a/app/views/image_page.haml
+++ b/app/views/image_page.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Image
+    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }
     :sass
       body
         margin: 0
