--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -6,5 +6,6 @@
     %script{ src: 'jquery.js' }
     %script{ src: 'qrcode.js' }
     %script{ src: 'script.js' }
+    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }
   %body
     = yield
