--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,5 +1,5 @@
 #nametag
-  #sco.sco.value
+  %input#sco-input
   .commands
     %a#info-btn{ href: "#info" } Show info
     %a#add-btn{ href: "#add" } Add screen
