--- a/app/views/style.sass
+++ b/app/views/style.sass
@@ -15,7 +15,7 @@ body
   .c
     color: #492
 
-.value, #url, #logo
+.value, #url, #logo, input#sco-input
   font-family: 'Bitter', serif
 
 #nametag
@@ -30,9 +30,12 @@ body
   text-align: center
 
 
-#sco
+#sco-input
   font-size: 72px
   line-height: 72px
+  text-align: center
+  border: none 0
+  width: 200px
 
 
 .pane
