--- a/app/views/style.sass
+++ b/app/views/style.sass
@@ -1,19 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Bitter)
 @import url(https://fonts.googleapis.com/css?family=Open+Sans)
+@import url(https://fonts.googleapis.com/css?family=Inconsolata)
 
 body
   font-family: Open Sans, sans-serif
-  background-color: #eee
+  background-color: #ddd
   font-size: 12px
+  text-align: center
 
 #logo
   font-size: 2em
-  .a
-    color: #942
-  .b
-    color: #D92
-  .c
-    color: #492
+  text-shadow: 0.1em 0.2em 0.3em #fff
 
 .value, #url, #logo, input#sco-input
   font-family: 'Bitter', serif
@@ -24,8 +21,7 @@ body
   border-radius: 0.5em
   padding: 1em 2em
   display: inline-block
-  float: right
-  margin: 0 0 2em 2em
+  margin: 1em
   min-width: 23em
   text-align: center
 
@@ -85,3 +81,13 @@ body
   //max-width: 40em
   p
     text-align: left
+
+code
+  background: #333
+  color: #EEE
+  display: inline-block
+  margin: auto
+  padding: 0.5em
+  border-radius: 0.2em
+  font-family: 'Inconsolata', fixed
+
