--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,20 +1,3 @@
-#nametag
-  %input#sco-input
-  .commands
-    %a#info-btn{ href: "#info" } Show info
-    %a#add-btn{ href: "#add" } Add screen
-  #info-pane.pane.hidden
-    %div
-      Farm ID:
-      %span#fid.fid.value
-    %div
-      Screen ID:
-      %span#sid.sid.value
-  #qrcode-pane.pane.hidden
-    #qrcode
-    #url
-
-
 #logo<
   %span.a> screen
   %span.b> .
@@ -22,23 +5,28 @@
 
 #loading Loading...
 
+#nametag
+  %input#sco-input
 
-#about
-  %h2 What is this?
+#info-pane
+  %div
+    Farm ID:
+    %span#fid.fid.value
+
+
+%p
+  To connect another device or browser,
+  scan the following code, or copy the URL:
+
+#qrcode-pane.pane
+  #qrcode
+  #url
+
+
+
+#example
   %p
-    This is a simple tool that can connect browsers on different
-    internet-connected devices, so you can push content between them.
-    You can use it, for example, to take a screenshot on your Mac and
-    have it automatically displayed on your tablet.
-    There is a REST API which allows you to push any URL or upload an image.
-  %h2 How does it work?
-  %p
-    You can add devices to your "farm" by pressing the "Add screen" button
-    above and visiting the URL or scanning the QR code.
-    Each screen will get a code which is displayed on the top.
-    To send content to a screen you can use the Rest API or any available app.
-    You will need the "Farm ID" and the "Screen Code" to the REST API or the app.
-  %h2 REST API
+    To push a URL to this browser:
   %p
     %code<
       curl -X POST
@@ -49,6 +37,9 @@
       = ":"
       %span.sco>
       = "\" --data url=http%3A%2F%2F9gag.com"
+
+  %p
+    To push an image to this browser:
   %p
     %code<
       curl -X POST
@@ -59,4 +50,3 @@
       = ":"
       %span.sco>
       = "\" --data file=@screenshot.png"
-
