fix upload curl command

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -49,4 +49,6 @@
       %span.fid>
       = ":"
       %span.sco>
-      = "\" --data file=@screenshot.png"
+      = "\" -F file=@screenshot.png"
+
+
