--- a/app/views/style.sass
+++ b/app/views/style.sass
@@ -12,8 +12,19 @@ body
   font-size: 2em
   text-shadow: 0.1em 0.2em 0.3em #fff
 
-.value, #url, #logo, input#sco-input
+.value, #url, #logo, input#sco-input, .bookmarklet
   font-family: 'Bitter', serif
+
+h2
+  font-family: Open Sans, sans-serif
+  font-weight: normal
+  font-size: 14px
+  margin: 0
+  padding: 0
+  margin-top: 1em
+  margin-bottom: 0em
+p
+  margin: .25em 0
 
 #nametag
   background: white
@@ -91,3 +102,16 @@ code
   border-radius: 0.2em
   font-family: 'Inconsolata', fixed
 
+#screens
+  .screen
+    display: inline-block
+a.bookmarklet
+  display: inline-block
+  text-decoration: none
+  padding: 0.5em
+  background: white
+  border-radius: 0.2em
+  margin: 0.5em
+  min-width: 4em
+  border: solid 1px #CCC
+  color: black
