--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -14,6 +14,7 @@
     %span#fid.fid.value
 
 
+%h2 Add screen
 %p
   To connect another device or browser,
   scan the following code, or copy the URL:
@@ -22,8 +23,14 @@
   #qrcode
   #url
 
+%h2 Bookmarklets
+%p
+  To create a bookmarklet button for sending any webpage to a screen,
+  drag the following links to your bookmark bar:
+#screens
 
 
+%h2 REST API
 #example
   %p
     To push a URL to this browser:
@@ -50,5 +57,6 @@
       = ":"
       %span.sco>
       = "\" -F file=@screenshot.png"
+
 
 
