--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -5,6 +5,20 @@
 
 #loading Loading...
 
+#intro
+  %p
+    <span class="product-name">screen.farm</span> is tool to push content to any connected browser window.
+  %p
+    You can use your tablet, phone or old laptop as a non-interactive external display
+    with minimal setup.
+
+  %ol
+    %li Add your device to your "farm" by scanning the QR code or entering the URL on that device
+    %li Your device will get a random name displayed in large letters, you can edit this
+    %li A small tag will appear at the bottom for each connected screen, this is a bookmarklet, drag this to your bookmark bar
+    %li Go to some webpage and press the bookmark – the webpage will now be opened on the respective device
+    %li You can also use the REST API to a send a URL or image to a device.
+
 #nametag
   %input#sco-input
 
