--- a/app/views/style.sass
+++ b/app/views/style.sass
@@ -12,7 +12,7 @@ body
   font-size: 2em
   text-shadow: 0.1em 0.2em 0.3em #fff
 
-.value, #url, #logo, input#sco-input, .bookmarklet
+.value, #url, #logo, input#sco-input, .bookmarklet, .product-name
   font-family: 'Bitter', serif
 
 h2
@@ -115,3 +115,9 @@ a.bookmarklet
   min-width: 4em
   border: solid 1px #CCC
   color: black
+
+
+#intro
+  max-width: 40em
+  text-align: left
+  margin: auto
